working search bar on products.php AND adminProducts.php
updated file uploader on EditProduct.php - working

--- a/css/admin.css
+++ b/css/admin.css
@@ -59,6 +59,9 @@ a{
 .product-tile p{
     font-size: 0.8rem;
 }
+.desktop-searchbar{
+    display: none;
+}
 
 
 
@@ -67,3 +70,19 @@ a{
 .item-imgs img{
     width: 2rem;
 }
+
+
+/* desktop */
+@media screen and (min-width: 992px) {
+
+    .desktop-searchbar{
+        display: block;
+    }
+    .mobile-searchbar{
+        display: none;
+    }
+}
+
+
+
+
