--- a/css/main.css
+++ b/css/main.css
@@ -445,7 +445,7 @@ footer h6 {
     background-color: white;
 }
 
-.searchIcon {
+.searchIcon, .mobileSearch {
     z-index: 10;
     margin-right: 1rem;
     font-size: 1rem !important;
@@ -1008,33 +1008,6 @@ select {
 
 /*PRODUCT DISPLAY*/
 
-.product-div{
-    justify-content: end !important;
-    margin-left: 15rem;
-    padding: 0rem 3rem 0rem 3rem;
-    margin-bottom: 3rem;
-    display: none;
-}
-.product-div div:first-child{
-    width: 100%;
-    background-color: var(--medium-blue);
-    color: white;
-}
-.product-div-info{
-    padding: 0rem 3rem 0rem 2rem;
-}
-.product-div-info h1{
-    font-size: 1.6rem;
-    font-weight: bold;
-}
-.product-div-info p{
-    font-size: small;
-}
-.product-div img{
-    width: 100%;
-    height: 18rem;
-    border-radius: 0px 8px 8px 0px;
-}
 
 
 
@@ -1082,6 +1055,9 @@ select {
     -webkit-line-clamp: 2;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+.product-div{
+    display: none;
 }
 .product h6{
     font-size: 0.9rem;
@@ -1524,6 +1500,34 @@ select {
 .cta-2 button{
     font-size: 1rem;
 }
+.product-div{
+    justify-content: end !important;
+    /* margin-left: 15rem; */
+    padding: 0rem 3rem 0rem 3rem;
+    margin-top: 4rem;
+    margin-bottom: 3rem;
+    display: block;
+}
+.product-div div:first-child{
+    width: 100%;
+    background-color: var(--medium-blue);
+    color: white;
+}
+.product-div-info{
+    padding: 0rem 3rem 0rem 2rem;
+}
+.product-div-info h1{
+    font-size: 1.6rem;
+    font-weight: bold;
+}
+.product-div-info p{
+    font-size: small;
+}
+.product-div img{
+    width: 100%;
+    height: 18rem;
+    border-radius: 0px 8px 8px 0px;
+}
 }
 
 /*LAPTOP*/
@@ -1886,6 +1890,34 @@ select {
 .background-img2, .background-img3{
     width: 33rem;
     height: 19.5rem;
+}
+
+.product-div{
+    justify-content: end !important;
+    margin-left: 15rem;
+    padding: 0rem 3rem 0rem 3rem;
+    margin-bottom: 3rem;
+    display: block;
+}
+.product-div div:first-child{
+    width: 100%;
+    background-color: var(--medium-blue);
+    color: white;
+}
+.product-div-info{
+    padding: 0rem 3rem 0rem 2rem;
+}
+.product-div-info h1{
+    font-size: 1.6rem;
+    font-weight: bold;
+}
+.product-div-info p{
+    font-size: small;
+}
+.product-div img{
+    width: 100%;
+    height: 18rem;
+    border-radius: 0px 8px 8px 0px;
 }
 }
 
