--- a/css/main.css
+++ b/css/main.css
@@ -485,19 +485,14 @@ footer h6 {
 .splide__pagination{
     display: none;
 }
-.splide-cont {
-    margin: 7rem 0rem 10rem 0rem;
-    width: 100%;
-    height: 12rem;
-}
 
 .splide {
-    width: 100% !important;
-    padding: 0rem 1rem 0rem 1rem;
+    width: 80% !important;
 }
 
 #splide01 {
     margin: 5rem 0rem 5rem 0rem;
+    width: 80%;
 }
 
 .splide__track {
@@ -516,17 +511,12 @@ footer h6 {
 }
 
 .splide {
-    width: 100% !important;
-    padding: 0rem 1rem 0rem 1rem;
+    width: 90% !important;
 }
 
 #splide01 {
     margin: 5rem 0rem 5rem 0rem;
 }
-
-/* .splide__track {
-    height: 20rem !important;
-} */
 
 .bs-item {
     text-align: center;
@@ -540,10 +530,6 @@ footer h6 {
     box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     cursor: pointer;
 }
-
-/* .bs-desc {
-    display: none;
-} */
 
 .bs-desc p {
     font-size: 0.8rem;
@@ -1210,7 +1196,7 @@ select {
     width: 100%;
     border-radius: 8px;
     /* height: 30rem; */
-    object-fit: contain;
+    object-fit: cover;
 }
 
 #slider1 .splide__pagination{
@@ -1394,7 +1380,7 @@ select {
     .bs-item img {
         filter: unset;
         height: 12rem;
-        object-fit: contain;
+        object-fit: cover;
     }
 
     .bs-item .overlay {
@@ -1807,21 +1793,12 @@ select {
         padding-bottom: 10rem;
     }
     
-/* ITEM PAGE */
-/* #slider1 .splide__track{
-    height: 25rem !important;
-} */
 
 #slider1{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-/* #slider1 .item-img img{
-    width: 100%;
-    height: 100% !important;
-} */
 
 
 .item-main{
@@ -1858,12 +1835,8 @@ select {
 
 .item-content p{
     font-size: 1rem;
-    /* margin-top: 2rem; */
 }
 
-.splide-cont{
-    transform: scale(0.9);
-}
 .item-img{
     height: 25rem;
 }
