--- a/css/main.css
+++ b/css/main.css
@@ -1265,6 +1265,14 @@ select {
     width: 100%; 
     height: 100%;
 }
+.favorite-btn{
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+.hello{
+    align-items: start;
+    justify-content: space-between;
+}
 
 /* END */
 
