--- a/css/main.css
+++ b/css/main.css
@@ -829,7 +829,7 @@ form label{
 form input, form textarea {
     border-radius: 8px;
     outline: none;
-    border: 1.5px solid var(--dark-blue);
+    border: 1.5px solid var(--medium-blue);
     width: 15rem;
     padding: 0.2rem;
 }
@@ -840,7 +840,7 @@ form input:active,
 form textarea:hover,
 form textarea:active,
 form textarea:focus {
-    border: 2px solid var(--darkest-blue);
+    border: 1.5px solid var(--darkest-blue);
     border-radius: 7px;
     outline: none;
     cursor: pointer;
@@ -1459,8 +1459,9 @@ select {
     cursor: pointer;
     background-color: var(--darkest-blue);
     color: white;
-    width: 12rem;
+    width: 100%;
     height: 15.5rem;
+    
 }
 .product-item img{
     width: 100%;
@@ -1491,7 +1492,7 @@ select {
 
 /* CART */
 .cart-cont{
-    padding: 9rem 1.5rem 0rem 1.5rem;
+    padding-top: 9rem;
 }
 
 .cart-item{
@@ -1499,7 +1500,7 @@ select {
     color: black;
     margin-bottom: 1.5rem;
     height: unset;
-    width: unset;
+    width: 100%;
 }
 .cart-item img{
     width: 7rem;
@@ -1675,8 +1676,10 @@ background-color: var(--medium-blue);
     background-color: var(--dark-blue);
   }
 
+  .cart-contents, .cart-info-cont{
+    padding: 0rem 2rem 0rem 2rem;
+  }
 
- 
 
 
 @media screen and (min-width: 481px) {
@@ -1853,6 +1856,43 @@ background-color: var(--medium-blue);
 
 /*LAPTOP*/
 @media screen and (min-width: 992px) {
+    .cart-contents{
+      padding: 0rem 3rem 0rem 3rem;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: start;
+    }
+    .cart-item{
+        width: 30rem;
+        margin-top: 2rem;
+    }
+    .total-container button{
+        font-size: 0.8rem;
+        padding: 0.4rem;
+    }
+    .payment-form{
+        width: 60rem;
+    }
+    .payment-form input{
+        width: 18rem;
+    }
+    .card-desk-flex{
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .apply-margin{
+        margin-right: 3rem;
+    }
+    .expiry, .security{
+       width: 12rem !important; 
+    }
+    .cart-info-cont{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .cart-information{
+        width: 40%;
+    }
     .cart-form label{
         width: 25rem;
     }
